@@ -14,6 +14,7 @@ version <next>:
 - chromakey filter
 - maskedmerge filter
 - Screenpresso SPV1 decoding
+- chromaprint fingerprinting muxer
 
 
 version 2.8:
